Fixed textarea spacing.

--- a/src/App.css
+++ b/src/App.css
@@ -461,7 +461,7 @@ input:disabled {
   align-items: center;
   flex-direction: row;
   width: 100%;
-  height: 300px;
+  min-height: 300px;
   /* or any desired height */
   /* border: #61dafb 1px solid; */
 }
@@ -471,7 +471,6 @@ input:disabled {
 }
 
 .textarea {
-  /* width: calc(100% / 3); */
   height: 100%;
   border: none;
   resize: none;
